Inserted deliberate failure into github action workflow to test response.

--- a/.github/workflows/github-actions-PR-demo.yml
+++ b/.github/workflows/github-actions-PR-demo.yml
@@ -14,5 +14,8 @@ jobs:
       - name: Run Maven test
         run: |
           mvn --no-transfer-progress test
+      - name: deliberate failure (testing github actions response)
+        run: |
+          false
       - name: Report ${{ job.status }} status
         run: echo "This job's status is ${{ job.status }}."
