Added code for react

--- a/curation_api/src/main/cliapp/package.json
+++ b/curation_api/src/main/cliapp/package.json
@@ -1,7 +1,7 @@
 {
     "name": "sigma-react",
     "version": "3.0.1",
-    "homepage": "/sigma-react",
+    "homepage": "/",
     "private": false,
     "repository": {
         "type": "git",
