--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
 
 	<properties>
 
-		<maven.compiler.source>1.11</maven.compiler.source>
-		<maven.compiler.target>1.11</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 		<failOnMissingWebXml>false</failOnMissingWebXml>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -149,14 +149,9 @@
 			<artifactId>hibernate-search-orm</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.hibernate.search</groupId>
-			<artifactId>hibernate-search-mapper-orm</artifactId>
-			<version>6.0.6.Final</version>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate.search</groupId>
-			<artifactId>hibernate-search-backend-elasticsearch</artifactId>
-			<version>6.0.6.Final</version>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-search-elasticsearch</artifactId>
+			<version>5.11.9.Final</version>
 		</dependency>
 
 
@@ -234,7 +229,7 @@
 					<cli-sessions>
 						<cli-session>
 							<script-files>
-								<script>../scripts/config.cli</script>
+								<script>scripts/config.cli</script>
 							</script-files>
 						</cli-session>
 					</cli-sessions>
