Added code for automating the UI

--- a/src/main/cliapp/Makefile
+++ b/src/main/cliapp/Makefile
@@ -6,3 +6,8 @@ start:
 
 build:
 	npm run-script build
+	cp build/index.html ../webapp
+	rm -fr ../webapp/assets
+	rm -fr ../webapp/static
+	mv build/assets ../webapp
+	mv build/static ../webapp
