--- a/src/main/cliapp/package.json
+++ b/src/main/cliapp/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "sigma-react",
-    "version": "3.0.1",
+    "name": "AGR Curation UI",
+    "version": "0.0.1",
     "homepage": "/",
     "private": false,
     "repository": {
         "type": "git",
-        "url": "https://github.com/primefaces/sigma.git"
+        "url": "https://github.com/alliance-genome/agr_curation.git"
     },
     "license": "MIT",
     "dependencies": {
@@ -16,6 +16,9 @@
         "axios": "^0.19.0",
         "chart.js": "2.7.3",
         "classnames": "^2.2.6",
+        "gulp": "^4.0.2",
+        "gulp-inline-source": "^4.0.0",
+        "gulp-replace": "^1.1.3",
         "node-sass": "^4.12.0",
         "primeflex": "1.0.0-rc.1",
         "primeicons": "1.0.0",
@@ -30,7 +33,7 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "react-scripts build",
+        "build": "react-scripts build && npx gulp",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
