--- a/.github/workflows/github-actions-PR-demo.yml
+++ b/.github/workflows/github-actions-PR-demo.yml
@@ -11,6 +11,9 @@ jobs:
         uses: actions/checkout@v2
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: Report Maven version
+        run: |
+          mvn --version
       - name: Run Maven test
         run: |
           mvn --no-transfer-progress test
