--- a/.github/workflows/github-actions-PR-demo.yml
+++ b/.github/workflows/github-actions-PR-demo.yml
@@ -34,6 +34,8 @@ jobs:
     - name: Amazon ECR login
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
+    - name: Check out repository code
+      uses: actions/checkout@v2
     - name: Build, tag, and push image to Amazon ECR
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
