Removed Swagger as it comes with quarkus

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 quarkus.datasource.db-kind=postgresql 
 quarkus.datasource.username=postgres
 quarkus.datasource.password=postgres
-
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/curation
+
 quarkus.datasource.jdbc.max-size=16
+
+quarkus.swagger-ui.path=/swagger-ui
+quarkus.smallrye-openapi.path=/openapi
+
 
 quarkus.http.limits.max-body-size=1g
 
