--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,7 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/curation
 
 quarkus.datasource.jdbc.max-size=16
 
-quarkus.swagger-ui.path=/swagger-ui
-quarkus.smallrye-openapi.path=/openapi
+quarkus.swagger-ui.always-include=true
 
 
 quarkus.http.limits.max-body-size=1g
@@ -14,3 +13,8 @@ quarkus.http.limits.max-body-size=1g
 quarkus.hibernate-orm.database.generation=update
 
 quarkus.hibernate-search-orm.elasticsearch.version=7
+quarkus.hibernate-search-orm.elasticsearch.hosts=localhost:9200
+
+
+quarkus.http.root-path=/
+quarkus.http.non-application-root-path=/
