--- a/src/main/cliapp/Makefile
+++ b/src/main/cliapp/Makefile
@@ -6,8 +6,8 @@ run:
 
 build:
 	npm run-script build
-	cp build/index.html ../webapp
-	rm -fr ../webapp/assets
-	rm -fr ../webapp/static
-	mv build/assets ../webapp
-	mv build/static ../webapp
+	cp build/index.html ../resources/META-INF/resources
+	rm -fr ../resources/META-INF/resources/assets
+	rm -fr ../resources/META-INF/resources/static
+	mv build/assets ../resources/META-INF/resources
+	mv build/static ../resources/META-INF/resources
