--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,13 @@
 
 		<dependency>
 			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-artemis-jms</artifactId>
+		</dependency>
+
+
+
+		<dependency>
+			<groupId>io.quarkus</groupId>
 			<artifactId>quarkus-smallrye-openapi</artifactId>
 		</dependency>
 		<dependency>
