--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,19 +2,19 @@ quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
 quarkus.datasource.password=postgres
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/curation
-
 quarkus.datasource.jdbc.max-size=16
 
-quarkus.swagger-ui.always-include=true
-
-
-quarkus.http.limits.max-body-size=1g
-
 quarkus.hibernate-orm.database.generation=update
-
 quarkus.hibernate-search-orm.elasticsearch.version=7
 quarkus.hibernate-search-orm.elasticsearch.hosts=localhost:9200
 
+quarkus.artemis.url=tcp://localhost:61616
+quarkus.artemis.username=quarkus
+quarkus.artemis.password=quarkus
+
+quarkus.swagger-ui.always-include=true
+
+quarkus.http.limits.max-body-size=1g
 
 quarkus.http.root-path=/
 quarkus.http.non-application-root-path=/
