--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
+# Java build artifacts
 .classpath
+target
+# IDE project/module settings
+.vscode
 .project
 .settings
 .idea
 *.iml
-target
-
-.vscode
 
 src/main/webapp/index.html
 src/main/webapp/assets
