--- a/pom.xml
+++ b/pom.xml
@@ -132,7 +132,10 @@
 			<groupId>io.quarkus</groupId>
 			<artifactId>quarkus-artemis-jms</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-resteasy-jaxb</artifactId>
+		</dependency>
 
 
 		<dependency>
