--- a/.github/workflows/github-actions-PR-validation.yml
+++ b/.github/workflows/github-actions-PR-validation.yml
@@ -6,7 +6,11 @@ jobs:
     steps:
       - name: Report workflow details
         run: |
-          echo "Branch-ref-name ${{ github.ref }}, repository ${{ github.repository }}."
+          echo "Repository ${{ github.repository }}."
+          echo "Trigger ref ${{ github.ref }}, base-ref ${{ github.base_ref }}, head_ref ${{ github.head_ref }}."
+      - name: Report files updated in PR
+        run: |
+          git diff --name-only ${{ github.base_ref }} ${{ github.head_ref }}
       - name: Check out repository code
         uses: actions/checkout@v2
       - name: Set up JDK 11
@@ -16,7 +20,7 @@ jobs:
           distribution: 'adopt'
       - name: Report runtime details
         run: |
-          echo "Github runner OS: ${{ runner.os }}, container ${{ job.container }}"
+          echo "Github runner OS: ${{ runner.os }}"
       - name: Report Maven version
         run: |
           mvn --version
