--- a/.github/workflows/github-actions-PR-validation.yml
+++ b/.github/workflows/github-actions-PR-validation.yml
@@ -12,6 +12,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Report files updated in PR
         run: |
+          git fetch origin ${{ github.base_ref }} ${{ github.head_ref }}
           git diff --name-only ${{ github.base_ref }} ${{ github.head_ref }}
       - name: Set up JDK 11
         uses: actions/setup-java@v2
