--- a/.github/workflows/github-actions-PR-validation.yml
+++ b/.github/workflows/github-actions-PR-validation.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Report files updated in PR
         run: |
           git fetch origin ${{ github.base_ref }} ${{ github.head_ref }}
-          git diff --name-only ${{ github.base_ref }} ${{ github.head_ref }}
+          git diff --name-only origin/${{ github.base_ref }} origin/${{ github.head_ref }}
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
