--- a/.github/workflows/github-actions-PR-validation.yml
+++ b/.github/workflows/github-actions-PR-validation.yml
@@ -1,5 +1,9 @@
 name: PR validation
-on: pull_request
+on:
+  pull_request:
+    paths-ignore:
+      - README.md
+      - .gitignore
 jobs:
   verify-test-api:
     runs-on: ubuntu-20.04
