--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+quarkus.http.host=0.0.0.0
+
 quarkus.datasource.db-kind=postgresql 
 quarkus.datasource.username=postgres
 quarkus.datasource.password=postgres
