--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
 		<quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-		<quarkus.platform.version>2.1.1.Final</quarkus.platform.version>
+		<quarkus.platform.version>2.1.2.Final</quarkus.platform.version>
 		<surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
 	</properties>
 
@@ -223,7 +223,7 @@
 				</plugins>
 			</build>
 			<properties>
-				<quarkus.package.type>native</quarkus.package.type>
+				<quarkus.package.type>uber-jar</quarkus.package.type>
 			</properties>
 		</profile>
 	</profiles>
