--- a/src/main/cliapp/package.json
+++ b/src/main/cliapp/package.json
@@ -14,16 +14,17 @@
         "@fullcalendar/interaction": "4.0.2",
         "@fullcalendar/timegrid": "4.0.1",
         "axios": "^0.19.0",
-        "prismjs": "1.9.0",
         "chart.js": "2.7.3",
         "classnames": "^2.2.6",
         "node-sass": "^4.12.0",
         "primeflex": "2.0.0",
         "primeicons": "4.1.0",
         "primereact": "6.1.0",
+        "prismjs": "1.9.0",
         "react": "^17.0.1",
         "react-app-polyfill": "^2.0.0",
         "react-dom": "^17.0.1",
+        "react-query": "^3.19.6",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.0",
         "react-transition-group": "^4.4.1"
