--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,11 +11,12 @@ quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-search-orm.elasticsearch.version=7
 quarkus.hibernate-search-orm.elasticsearch.hosts=localhost:9200
 
-quarkus.artemis.url=tcp://localhost:61616
-quarkus.artemis.username=quarkus
-quarkus.artemis.password=quarkus
+#quarkus.artemis.url=tcp://localhost:61616
+#quarkus.artemis.username=quarkus
+#quarkus.artemis.password=quarkus
 
 quarkus.swagger-ui.always-include=true
+quarkus.swagger-ui.doc-expansion=none
 
 quarkus.http.limits.max-body-size=1g
 
