Removed default deploy environment from eb config

--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,6 +1,6 @@
 branch-defaults:
   AWS_EB_testing:
-    environment: curation-test
+    environment: null
 global:
   application_name: curation-app
   branch: null
