Added different subnets to the config

--- a/.ebextensions/aws-ec2-vpc.config
+++ b/.ebextensions/aws-ec2-vpc.config
@@ -1,12 +1,11 @@
 option_settings:
   aws:ec2:vpc:
-    AssociatePublicIpAddress: true
+    AssociatePublicIpAddress: false
     Subnets:
-     - subnet-3ebf4477
-     - subnet-af62dca3
-     - subnet-ff838bd5
-     - subnet-2237241f
-     - subnet-df7c7487
-     - subnet-81c95ee4
+     - subnet-0d4703177afb1797d
+     - subnet-04262fc338f638054
+     - subnet-044457c061edf85f2
+     - subnet-04019d42d5c9e6fb9
+     - subnet-049778993fb504a7c
     VPCId: vpc-55522232
     ELBScheme: internal
