Added rules to loader balencer

--- a/.ebextensions/loadbalancer.config
+++ b/.ebextensions/loadbalancer.config
@@ -1,22 +1,30 @@
-option_settings:
-  aws:elasticbeanstalk:environment:
-    LoadBalancerType: application
-  aws:elbv2:listener:80:
-    ListenerEnabled: 'false'
-  #   ListenerEnabled: 'true'
-  #   Rules: httpsredirect
-  # aws:elbv2:listenerrule:httpsredirect:
-  #   process: redirect
-  aws:elbv2:listener:443:
-    SSLCertificateArns: arn:aws:acm:us-east-1:100225593120:certificate/70263776-5e62-4454-9997-bb7e560d7c63
-    Protocol: HTTPS
-    ListenerEnabled: 'true'
-    DefaultProcess: http
-  aws:elasticbeanstalk:environment:process:http:
-    Port: '8080'
-    Protocol: HTTP
-  # aws:elasticbeanstalk:environment:process:redirect:
-  #   Port: '443'
-  #   Protocol: HTTPS
-  aws:elbv2:loadbalancer:
-    SecurityGroups: sg-21ac675b
+Resources:
+  AWSEBV2LoadBalancerListener:
+    Type: 'AWS::ElasticLoadBalancingV2::Listener'
+    Properties:
+      DefaultActions:
+        - Type: redirect
+          RedirectConfig:
+            Protocol: HTTPS
+            Port: '443'
+            Host: '#{host}'
+            Path: '/#{path}'
+            Query: '#{query}'
+            StatusCode: HTTP_301
+      LoadBalancerArn:
+        Ref: AWSEBV2LoadBalancer
+      Port: 80
+      Protocol: HTTP
+  AWSEBV2LoadBalancerListenerHTTPS:
+    Type: 'AWS::ElasticLoadBalancingV2::Listener'
+    Properties:
+      Certificates:
+        - CertificateArn: arn:aws:acm:us-east-1:100225593120:certificate/70263776-5e62-4454-9997-bb7e560d7c63
+      DefaultActions:
+        - Type: forward
+          TargetGroupArn:
+            Ref: AWSEBV2LoadBalancerTargetGroup
+      LoadBalancerArn:
+        Ref: AWSEBV2LoadBalancer
+      Port: 443
+      Protocol: HTTPS
