--- a/.ebextensions/loadbalancer.config
+++ b/.ebextensions/loadbalancer.config
@@ -19,10 +19,15 @@ option_settings:
   aws:elbv2:listener:443:
     SSLCertificateArns: arn:aws:acm:us-east-1:100225593120:certificate/70263776-5e62-4454-9997-bb7e560d7c63
     Protocol: HTTPS
-    ListenerEnabled: 'true'
     DefaultProcess: http
+  aws:elbv2:listener:9000:
+    Protocol: HTTP
+    DefaultProcess: cerebro
   aws:elasticbeanstalk:environment:process:http:
     Port: '8080'
+    Protocol: HTTP
+  aws:elasticbeanstalk:environment:process:cerebro:
+    Port: '9000'
     Protocol: HTTP
   aws:elbv2:loadbalancer:
     SecurityGroups: sg-21ac675b
