--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,14 @@
 	</dependencyManagement>
 
 	<dependencies>
+		<dependency>
+			<groupId>net.sourceforge.owlapi</groupId>
+			<artifactId>owlapi-distribution</artifactId>
+			<version>5.1.9</version>
+		</dependency>
+
+
+
 
 		<dependency>
 			<groupId>io.quarkus</groupId>
