--- a/.ebextensions/loadbalancer.config
+++ b/.ebextensions/loadbalancer.config
@@ -16,6 +16,14 @@ Resources:
       Port: 80
       Protocol: HTTP
 option_settings:
+  # As noted in the AWS docs, the following option cannot be set through the .ebextensions configuration files,
+  # and thus has to be defines through EB CLI arguments on environment creation.
+  #
+  # aws:elasticbeanstalk:environment:
+  #   LoadBalancerType: application
+  #
+  # https://docs.aws.amazon.com/elasticbeanstalk/latest/dg/environments-cfg-alb.html#environments-cfg-alb-namespaces
+
   aws:elbv2:listener:443:
     SSLCertificateArns: arn:aws:acm:us-east-1:100225593120:certificate/70263776-5e62-4454-9997-bb7e560d7c63
     Protocol: HTTPS
