--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ quarkus.hibernate-orm.database.generation=update
 
 quarkus.hibernate-search-orm.elasticsearch.version=7
 quarkus.hibernate-search-orm.elasticsearch.hosts=localhost:9200
+quarkus.hibernate-search-orm.elasticsearch.protocol=http
+quarkus.hibernate-search-orm.elasticsearch.index_schema_management_strategy=MERGE
 
 quarkus.qpid-jms.url=amqp://localhost:5672
 quarkus.qpid-jms.username=quarkus
@@ -22,3 +24,4 @@ quarkus.http.limits.max-body-size=1g
 
 quarkus.http.root-path=/
 quarkus.http.non-application-root-path=/
+
