--- a/.github/workflows/post-merge-image-build.yml
+++ b/.github/workflows/post-merge-image-build.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: agr_curation_prototype
+        ECR_REPOSITORY: agr_curation
         IMAGE_TAG: ${{ github.sha }}
         GITHUB_BRANCH: ${{ github.ref }}
       run: |
