--- a/.github/workflows/github-production-release.yml
+++ b/.github/workflows/github-production-release.yml
@@ -19,7 +19,8 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: agr_curation
-        IMAGE_TAG: ${{ github.sha }}
+        #IMAGE_TAG: ${{ github.sha }}
+        IMAGE_TAG: main
         GITHUB_BRANCH: ${{ github.ref }}
       run: |
         docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
