--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,6 +1,8 @@
 branch-defaults:
   AWS_EB_testing:
     environment: null
+  main:
+    environment: curation-production
 global:
   application_name: curation-app
   branch: null
