--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,43 +18,43 @@ services:
 #      - ARTEMIS_USERNAME=quarkus
 #      - ARTEMIS_PASSWORD=quarkus
 
-  cerebro:
-    container_name: agr.curation.cerebro.server
-    image: yannart/cerebro
-    logging:
-      driver: gelf
-      options:
-        gelf-address: "udp://logs.alliancegenome.org:12201"
-    ports:
-      - "9000:9000"
-    networks:
-      - curation
-    depends_on:
-      - "elasticsearch"
+#  cerebro:
+#    container_name: agr.curation.cerebro.server
+#    image: yannart/cerebro
+#    logging:
+#      driver: gelf
+#      options:
+#        gelf-address: "udp://logs.alliancegenome.org:12201"
+#    ports:
+#      - "9000:9000"
+#    networks:
+#      - curation
+#    depends_on:
+#      - "elasticsearch"
 
-  elasticsearch:
-    container_name: agr.curation.elasticsearch.server
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.9.0
-    logging:
-      driver: gelf
-      options:
-        gelf-address: "udp://logs.alliancegenome.org:12201"
-    ports:
-      - "9200:9200"
-      - "9300:9300"
-    networks:
-      - curation
-    environment:
-      - discovery.type=single-node
-    healthcheck:
-        test: ["CMD", "curl", "-f", "http://agr.curation.elasticsearch.server:9200"]
-        interval: 10s
-        timeout: 10s
-        retries: 6
+#  elasticsearch:
+#    container_name: agr.curation.elasticsearch.server
+#    image: docker.elastic.co/elasticsearch/elasticsearch:7.9.0
+#    logging:
+#      driver: gelf
+#      options:
+#        gelf-address: "udp://logs.alliancegenome.org:12201"
+#    ports:
+#      - "9200:9200"
+#      - "9300:9300"
+#    networks:
+#      - curation
+#    environment:
+#      - discovery.type=single-node
+#    healthcheck:
+#        test: ["CMD", "curl", "-f", "http://agr.curation.elasticsearch.server:9200"]
+#        interval: 10s
+#        timeout: 10s
+#        retries: 6
 
   curation.app:
     container_name: agr.curation.api.server
-    image: 100225593120.dkr.ecr.us-east-1.amazonaws.com/agr_curation:0.0.5
+    image: 100225593120.dkr.ecr.us-east-1.amazonaws.com/agr_curation:0.1.0
     logging:
       driver: gelf
       options:
@@ -64,20 +64,16 @@ services:
     networks:
       - curation
     environment:
-      #- QUARKUS_ARTEMIS_URL=tcp://curation.activemq:61616
-      #- QUARKUS_ARTEMIS_PASSWORD=quarkus
-      #- QUARKUS_ARTEMIS_USERNAME=quarkus
-      - QUARKUS_DATASOURCE_JDBC_URL=jdbc:postgresql://curation-db.cmnnhlso7wdi.us-east-1.rds.amazonaws.com:5432/curation
-      # - QUARKUS_DATASOURCE_PASSWORD=${QUARKUS_DATASOURCE_PASSWORD}
-      # - QUARKUS_DATASOURCE_USERNAME=${QUARKUS_DATASOURCE_USERNAME}
-      - QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_HOSTS=agr.curation.elasticsearch.server:9200
+      - QUARKUS_DATASOURCE_USERNAME=${QUARKUS_DATASOURCE_USERNAME}
+      - QUARKUS_DATASOURCE_PASSWORD=${QUARKUS_DATASOURCE_PASSWORD}
+      - QUARKUS_DATASOURCE_JDBC_URL=${QUARKUS_DATASOURCE_JDBC_URL}
+      - QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_HOSTS=${QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_HOSTS}
+      - QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_PROTOCOL=${QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_PROTOCOL}
+      - QUARKUS_QPID_JMS_URL=${QUARKUS_QPID_JMS_URL}
+      - QUARKUS_QPID_JMS_USERNAME=${QUARKUS_QPID_JMS_USERNAME}
+      - QUARKUS_QPID_JMS_PASSWORD=${QUARKUS_QPID_JMS_PASSWORD}
     env_file:
       - .env
-    depends_on:
-      # - elasticsearch:
-      #     condition: service_healthy
-      - "elasticsearch"
-      #- "activemq"
 
 networks:
   # The presence of these objects is sufficient to define them
