--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<groupId>org.alliancegenome</groupId>
 	<artifactId>agr_curation_api</artifactId>
 	<name>AGR Curation :: API</name>
-	<version>0.0.9</version>
+	<version>0.0.9-SNAPSHOT</version>
 
 	<properties>
 
@@ -23,6 +23,10 @@
 		<quarkus.platform.version>2.2.1.Final</quarkus.platform.version>
 		<surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
 	</properties>
+
+	<scm>
+		<developerConnection>scm:git:git@github.com:alliance-genome/agr_curation.git</developerConnection>
+	</scm>
 
 	<dependencyManagement>
 		<dependencies>
@@ -217,6 +221,14 @@
 								</configuration>
 							</execution>
 						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-release-plugin</artifactId>
+						<version>3.0.0-M4</version>
+						<configuration>
+							<tagBase>https://github.com/alliance-genome/agr_curation/releases</tagBase>
+						</configuration>
 					</plugin>
 				</plugins>
 			</build>
