--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,64 +1,10 @@
 version: "3.2"
 
 services:
-#  activemq:
-#    container_name: agr.curation.activemq
-#    image: vromero/activemq-artemis:2.9.0-alpine
-#    logging:
-#      driver: gelf
-#      options:
-#        gelf-address: "udp://logs.alliancegenome.org:12201"
-#    ports:
-#      - "8161:8161"
-#      - "61616:61616"
-#      - "5672:5672"
-#    networks:
-#      - curation
-#    environment:
-#      - ARTEMIS_USERNAME=quarkus
-#      - ARTEMIS_PASSWORD=quarkus
-
-#  cerebro:
-#    container_name: agr.curation.cerebro.server
-#    image: yannart/cerebro
-#    logging:
-#      driver: gelf
-#      options:
-#        gelf-address: "udp://logs.alliancegenome.org:12201"
-#    ports:
-#      - "9000:9000"
-#    networks:
-#      - curation
-#    depends_on:
-#      - "elasticsearch"
-
-#  elasticsearch:
-#    container_name: agr.curation.elasticsearch.server
-#    image: docker.elastic.co/elasticsearch/elasticsearch:7.9.0
-#    logging:
-#      driver: gelf
-#      options:
-#        gelf-address: "udp://logs.alliancegenome.org:12201"
-#    ports:
-#      - "9200:9200"
-#      - "9300:9300"
-#    networks:
-#      - curation
-#    environment:
-#      - discovery.type=single-node
-#    healthcheck:
-#        test: ["CMD", "curl", "-f", "http://agr.curation.elasticsearch.server:9200"]
-#        interval: 10s
-#        timeout: 10s
-#        retries: 6
 
   curation.app:
     container_name: agr.curation.api.server
-    image: 100225593120.dkr.ecr.us-east-1.amazonaws.com/agr_curation:0.1.0
-    logging:
-      driver: gelf
-      options:
-        gelf-address: "udp://logs.alliancegenome.org:12201"
+    image: 100225593120.dkr.ecr.us-east-1.amazonaws.com/agr_curation:${AGR_CURATION_RELEASE}
     ports:
       - "8080:8080"
     networks:
