--- a/.github/workflows/github-production-release.yml
+++ b/.github/workflows/github-production-release.yml
@@ -26,7 +26,7 @@ jobs:
         ECR_REPOSITORY: agr_curation
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF#refs/tags/} .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF#refs/heads/}
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF#refs/tags/}
     - name: Deploy to Production
       run: |
-        eb deploy curation-production --envvars AGR_CURATION_RELEASE=${GITHUB_REF#refs/heads/}
+        eb deploy curation-production --envvars AGR_CURATION_RELEASE=${GITHUB_REF#refs/tags/}
