--- a/.github/workflows/github-production-release.yml
+++ b/.github/workflows/github-production-release.yml
@@ -27,6 +27,7 @@ jobs:
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF#refs/tags/} .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF#refs/tags/}
-    - name: Deploy to Production
-      run: |
-        eb deploy curation-production --envvars AGR_CURATION_RELEASE=${GITHUB_REF#refs/tags/}
+    - name:
+      uses: hmanzur/actions-aws-eb@v1.0.0
+      with:
+        command: 'deploy curation-production --envvars AGR_CURATION_RELEASE=${GITHUB_REF#refs/tags/}'
