--- a/.github/workflows/github-production-release.yml
+++ b/.github/workflows/github-production-release.yml
@@ -27,7 +27,11 @@ jobs:
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF#refs/tags/} .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF#refs/tags/}
+    - name: Set version before Deploy
+      run: |
+        sed -i 's/0.0.0/${GITHUB_REF#refs/tags/}/g' .ebextensions/version.config
+        cat .ebextensions/version.config
     - name:
       uses: hmanzur/actions-aws-eb@v1.0.0
       with:
-        command: 'deploy curation-production --envvars AGR_CURATION_RELEASE=${GITHUB_REF#refs/tags/}'
+        command: 'deploy curation-production'
