--- a/.github/workflows/github-production-release.yml
+++ b/.github/workflows/github-production-release.yml
@@ -32,10 +32,12 @@ jobs:
         cat .ebextensions/version.config
         sed -i.bak "s/0.0.0/${GITHUB_REF#refs/tags/}/g" .ebextensions/version.config
         cat .ebextensions/version.config
-    - name: Installing Elastic Beanstalk Cli
-      run: |
-        python -m pip install --upgrade pip
-        pip install awsebcli --upgrade
-        eb --version
-        eb use curation-production
-        eb deploy curation-production --version ${GITHUB_REF#refs/tags/}
+    - name: Deploy to EB
+      uses: einaregilsson/beanstalk-deploy@v14
+      with:
+        aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
+        aws_secret_key: ${{ secrets.AWS_ACCESS_SECRET_KEY }}
+        application_name: curation-app
+        environment_name: curation-production
+        version_label: ${GITHUB_REF#refs/tags/}
+        region: us-east-1
