--- a/.github/workflows/github-production-release.yml
+++ b/.github/workflows/github-production-release.yml
@@ -35,8 +35,8 @@ jobs:
     - name: Deploy to EB
       uses: einaregilsson/beanstalk-deploy@v14
       with:
-        aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
-        aws_secret_key: ${{ secrets.AWS_ACCESS_SECRET_KEY }}
+        aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         application_name: curation-app
         environment_name: curation-production
         version_label: ${GITHUB_REF#refs/tags/}
