--- a/.github/workflows/github-production-release.yml
+++ b/.github/workflows/github-production-release.yml
@@ -38,6 +38,8 @@ jobs:
       run: |
         echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/tags/})"
         echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+    - name: Generate deployment package
+      run: zip -r ${{ steps.vars.outputs.branch }}.zip docker-compose.yml
     - name: Deploy to EB
       uses: einaregilsson/beanstalk-deploy@v14
       with:
