--- a/.github/workflows/github-production-release.yml
+++ b/.github/workflows/github-production-release.yml
@@ -47,5 +47,6 @@ jobs:
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         application_name: curation-app
         environment_name: curation-production
+        version_label: ${{ steps.vars.outputs.branch }}
         deployment_package: ${{ steps.vars.outputs.branch }}.zip
         region: us-east-1
