--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-search-orm.elasticsearch.version=7
 quarkus.hibernate-search-orm.elasticsearch.hosts=localhost:9200
 quarkus.hibernate-search-orm.elasticsearch.protocol=http
-quarkus.hibernate-search-orm.elasticsearch.index_schema_management_strategy=MERGE
+quarkus.hibernate-search-orm.schema-management.strategy=create-or-update
 
 quarkus.qpid-jms.url=amqp://localhost:5672
 quarkus.qpid-jms.username=quarkus
