--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 quarkus.http.host=0.0.0.0
+quarkus.http.limits.max-body-size=
 
 quarkus.datasource.db-kind=postgresql 
 quarkus.datasource.username=postgres
