Added API Version to UI and reorgged menus

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ quarkus.hibernate-search-orm.elasticsearch.version=7
 quarkus.hibernate-search-orm.elasticsearch.hosts=localhost:9200
 quarkus.hibernate-search-orm.elasticsearch.protocol=http
 quarkus.hibernate-search-orm.schema-management.strategy=create-or-update
+quarkus.hibernate-search-orm.automatic-indexing.synchronization.strategy=sync
 
 quarkus.qpid-jms.url=amqp://localhost:5672
 quarkus.qpid-jms.username=quarkus
