Added example sql query in the application file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,5 @@ quarkus.http.limits.max-body-size=1g
 quarkus.http.root-path=/
 quarkus.http.non-application-root-path=/
 
+#quarkus.log.category."org.hibernate.SQL".level=DEBUG
+
