Redeploy if need be the same version again

--- a/.github/workflows/github-production-release.yml
+++ b/.github/workflows/github-production-release.yml
@@ -54,6 +54,7 @@ jobs:
         environment_name: curation-production
         version_label: ${{ steps.vars.outputs.tagname }}
         deployment_package: ${{ steps.vars.outputs.tagname }}.zip
+        use_existing_version_if_available: true
         region: us-east-1
     - name: Slack Notification
       uses: tokorom/action-slack-incoming-webhook@main
