--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,31 +1,30 @@
 quarkus.http.host=0.0.0.0
 quarkus.http.limits.max-body-size=
-
-quarkus.datasource.db-kind=postgresql 
-quarkus.datasource.username=postgres
-quarkus.datasource.password=postgres
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/curation
-quarkus.datasource.jdbc.max-size=16
-
-quarkus.hibernate-orm.database.generation=update
-
-quarkus.hibernate-search-orm.elasticsearch.version=7
-quarkus.hibernate-search-orm.elasticsearch.hosts=localhost:9200
-quarkus.hibernate-search-orm.elasticsearch.protocol=http
-quarkus.hibernate-search-orm.schema-management.strategy=create-or-update
-quarkus.hibernate-search-orm.automatic-indexing.synchronization.strategy=sync
-
-quarkus.qpid-jms.url=amqp://localhost:5672
-quarkus.qpid-jms.username=quarkus
-quarkus.qpid-jms.password=quarkus
+quarkus.http.limits.max-body-size=1g
+quarkus.http.root-path=/
+quarkus.http.non-application-root-path=/
 
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.doc-expansion=none
 
-quarkus.http.limits.max-body-size=1g
+quarkus.datasource.db-kind=postgresql 
+quarkus.datasource.username=postgres
+quarkus.datasource.password=postgres
+quarkus.datasource.jdbc.max-size=16
 
-quarkus.http.root-path=/
-quarkus.http.non-application-root-path=/
+quarkus.hibernate-orm.database.generation=update
 
-#quarkus.log.category."org.hibernate.SQL".level=DEBUG
+quarkus.hibernate-search-orm.elasticsearch.version=7.9.0
+
+quarkus.hibernate-search-orm.schema-management.strategy=create-or-update
+quarkus.hibernate-search-orm.automatic-indexing.synchronization.strategy=sync
+
+quarkus.qpid-jms.username=quarkus
+quarkus.qpid-jms.password=quarkus
+
+%dev.quarkus.hibernate-search-orm.schema-management.strategy=create-or-update
+%dev.quarkus.hibernate-search-orm.elasticsearch.hosts=localhost:9200
+%dev.quarkus.hibernate-search-orm.elasticsearch.protocol=http
+%dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/curation
+%dev.quarkus.qpid-jms.url=amqp://localhost:5672
 
