--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,17 +13,14 @@ quarkus.datasource.password=postgres
 quarkus.datasource.jdbc.max-size=16
 
 quarkus.hibernate-orm.database.generation=update
-
 quarkus.hibernate-search-orm.elasticsearch.version=7.9.0
-
+quarkus.hibernate-search-orm.elasticsearch.protocol=http
 quarkus.hibernate-search-orm.schema-management.strategy=create-or-update
 quarkus.hibernate-search-orm.automatic-indexing.synchronization.strategy=sync
 
 quarkus.qpid-jms.username=quarkus
 quarkus.qpid-jms.password=quarkus
 
-%dev.quarkus.hibernate-search-orm.schema-management.strategy=create-or-update
 %dev.quarkus.hibernate-search-orm.elasticsearch.hosts=localhost:9200
-%dev.quarkus.hibernate-search-orm.elasticsearch.protocol=http
 %dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/curation
 %dev.quarkus.qpid-jms.url=amqp://localhost:5672
