Added code to streamline find vs search

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ quarkus.qpid-jms.password=quarkus
 %dev.quarkus.hibernate-search-orm.elasticsearch.hosts=localhost:9200
 %dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/curation
 %dev.quarkus.qpid-jms.url=amqp://localhost:5672
+
+
+#%dev.quarkus.log.category."org.hibernate.SQL".level=DEBUG
